# gradio-fargate-factory

./: .SourceSageignore  .gitignore  README.md
.forgejo/workflows/: deploy-v3.yml  deploy.yml
apps/image-filter/src/: Dockerfile  app.py  requirements.txt
apps/image-filter/terraform/: main.tf  variables.tf
apps/text-processor/src/: app.py
apps/text-processor/terraform/: main.tf
deploy_server/: .env  .env.example  README.md  deploy_client.py  main.py  pyproject.toml  sample_client.py
deploy_server/example/: deploy_client.py  sample_client.py
deploy_server/models/: __init__.py  deploy.py
deploy_server/scripts/: generate_env.sh
deploy_server/utils/: __init__.py  aws.py  common.py
scripts/: create-new-app.sh
terraform/: backend.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example
terraform/base-infrastructure/: alb.tf  iam.tf  main.tf  outputs.tf  vpc.tf
terraform/environments/base-infrastructure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/existing-vpc/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf
terraform/modules/gradio-app/: alb.tf  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: variables.tf
terraform/modules/vpc/: outputs.tf
terraform/scripts/: ecs_destroyer.sh
